# loop-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/deck-build/: loop-agent-deck.pptx.inspect.ndjson
docs/specs/: 2026-07-03-loop-agent-phase1-design.md
loop_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
loop_agent/agent/: compaction.py  context.py  frontmatter.py  loop.py  memory.py  skills.py  tools.py  trace.py  truncation.py
loop_agent/api/: __init__.py  app.py  routes.py  schemas.py  sse.py
loop_agent/cli/: commands.py  main.py
loop_agent/orchestration/: __init__.py  dag.py  filtered_skills.py  specs.py  supervisor.py  tools.py
loop_agent/providers/: chat.py  llm.py
loop_agent/storage/: __init__.py  session_store.py
loop_agent/tools/: __init__.py  compact_tool.py  echo_tool.py  load_skill_tool.py  path_safety.py  read_file_tool.py  (+2 more)
tests/: test_api.py  test_api_schemas.py  test_builtin_skills.py  test_builtin_tools.py  test_chat_retry.py  test_cli.py  test_compaction.py  test_context.py  test_cors.py  test_dag_validation.py  test_expand_fanout.py  test_file_sandbox.py  test_filtered_skills.py  test_frontmatter.py  test_loop.py  test_loop_skills_loader.py  test_memory.py  test_path_safety.py  test_providers.py  test_session_endpoints.py  test_session_store.py  test_skills.py  test_sse.py  test_step_instance.py  test_step_template.py  test_supervisor.py  test_supervisor_dag.py  test_tool_progress.py  test_tools.py  test_trace.py  test_trace_tool_error.py  test_truncation.py  test_web_search_tool.py  test_worker_spec.py
(+26 files in other folders)
